--- a/haskell-src-exts.cabal
+++ b/haskell-src-exts.cabal
@@ -107,6 +107,7 @@ Test-Suite test
 
 executable program
   main-is:          Testparse.hs
+  other-modules:    Transform
   Build-Tools:      happy >= 1.19
   build-depends:    array >= 0.1, pretty >= 1.0,
                     base >= 4.5 && < 5,
