--- a/haskell-src-exts.cabal
+++ b/haskell-src-exts.cabal
@@ -111,7 +111,9 @@ executable program
   Build-Tools:      happy >= 1.19
   build-depends:    array >= 0.1, pretty >= 1.0,
                     base >= 4.5 && < 5,
-                    haskell-src-exts
+                    haskell-src-exts,
+                    containers, 
+                    mtl  
   hs-source-dirs:   experimenting
   Default-language: Haskell98
   Ghc-options:      -threaded -Wall
