Improve testsuite directory handling and testsuite code structure

--- a/haskell-src-exts.cabal
+++ b/haskell-src-exts.cabal
@@ -131,7 +131,8 @@ executable testsuite
                     mtl,
                     tasty,
                     tasty-golden,
-                    filepath
+                    filepath,
+                    directory
   hs-source-dirs:   comp-transform/src, comp-transform/tests/testsuite
   Default-language: Haskell2010
   Ghc-options:      -threaded -Wall
