Transformer map for expressions

--- a/haskell-src-exts.cabal
+++ b/haskell-src-exts.cabal
@@ -109,7 +109,8 @@ executable program
   main-is:          Testparse.hs
   other-modules:    Transform,
                     Types,
-                    Decls
+                    Decls,
+                    Exps
   Build-Tools:      happy >= 1.19
   build-depends:    array >= 0.1, pretty >= 1.0,
                     base >= 4.5 && < 5,
@@ -124,7 +125,8 @@ executable testsuite
   main-is:          TestRunner.hs
   other-modules:    Transform,
                     Types,
-                    Decls
+                    Decls,
+                    Exps
   Build-Tools:      happy >= 1.19
   build-depends:    array >= 0.1, pretty >= 1.0,
                     base >= 4.5 && < 5,
