Move some modules to new folder Utils

--- a/haskell-src-exts.cabal
+++ b/haskell-src-exts.cabal
@@ -108,10 +108,10 @@ Test-Suite test
 executable program
   main-is:          Testparse.hs
   other-modules:    Transform,
-                    Types,
-                    Decls,
-                    Exps,
-                    Names
+                    Utils.Types,
+                    Utils.Decls,
+                    Utils.Exps,
+                    Utils.Names
   Build-Tools:      happy >= 1.19
   build-depends:    array >= 0.1, pretty >= 1.0,
                     base >= 4.5 && < 5,
@@ -125,10 +125,10 @@ executable program
 executable testsuite
   main-is:          TestRunner.hs
   other-modules:    Transform,
-                    Types,
-                    Decls,
-                    Exps,
-                    Names
+                    Utils.Types,
+                    Utils.Decls,
+                    Utils.Exps,
+                    Utils.Names
   Build-Tools:      happy >= 1.19
   build-depends:    array >= 0.1, pretty >= 1.0,
                     base >= 4.5 && < 5,
