--- a/haskell-src-exts.cabal
+++ b/haskell-src-exts.cabal
@@ -109,6 +109,7 @@ executable program
   main-is:          Testparse.hs
   other-modules:    Transform,
                     FunctionTransform,
+                    PieceTransform,
                     TransformUtils,
                     Utils.Types,
                     Utils.Decls,
@@ -128,6 +129,7 @@ executable testsuite
   main-is:          TestRunner.hs
   other-modules:    Transform,
                     FunctionTransform,
+                    PieceTransform,
                     TransformUtils,
                     Utils.Types,
                     Utils.Decls,
