--- a/haskell-src-exts.cabal
+++ b/haskell-src-exts.cabal
@@ -111,6 +111,7 @@ executable program
                     FunctionTransform,
                     PieceTransform,
                     TransformUtils,
+                    GeneratedNames,
                     Utils.Types,
                     Utils.Decls,
                     Utils.Exps,
@@ -131,6 +132,7 @@ executable testsuite
                     FunctionTransform,
                     PieceTransform,
                     TransformUtils,
+                    GeneratedNames,
                     Utils.Types,
                     Utils.Decls,
                     Utils.Exps,
